# lmprof_example

./: .clangd  CMakeLists.txt  README.md
3party/cjson/: CMakeLists.txt  Makefile  dtoa.c  g_fmt.c  lua_cjson.c  strbuf.c
3party/lpeg/: makefile
3party/lua52/src/: lua.c
3party/lua53/src/: lobject.c  lobject.h  lua.c  luac.c  luaconf.h
3party/lua54/src/: lua.c  luac.c
lmprof/: ascii_print.lua
lua/: HL1V1Divisions.lua  PepperfishProfiler.lua  callgrind.lua  lmprof_default_output.lua  logger.lua  luam  pcg.lua  serpent.lua  stage1.lua  stage2.lua  test.lua
src/: c_hook.c  init.c  lmprof.c  lmprof_hash.c  lmprof_hash.h  lmprof_lstrace.c  lmprof_lstrace.h  lmprof_stack.c  lmprof_stack.h
test/: tailcall.lua
